@@ -14,5 +14,6 @@ cp -r bin ../deployment/Windows
 cd ../deployment/Windows
 cp ../../docs/EmissionControl2-Manual.pdf ./bin/
 cp ../../LICENSE ./bin/
+cp ../../externalResources/windows/README.txt ./bin/
 mv bin EmissionControl2
 echo "EmissionControl2 moved to: $(pwd)"
