@@ -1,0 +1,2 @@
+You can run EC2 from the exe here. 
+But if you'd like to install it on your system, we recommend moving this entire folder into your Program Files directory on your PC.
