@@ -27,5 +27,6 @@ Version 1.2 Changelog:
 - Rolled fonts into binary
 - Fixed bug where recording didn't work if file name didn't end in ".wav" (Issue #100). Created checker that appends .wav if missing.
 - Various other small bugs squashed
+- Linux only: added an installer for a version of EC2 without JACK (for better Pipewire compatibility)
 - BREAKING CHANGE FOR LINUX: fixed an issue with the saving of presets
-  - Fix: run the script 'linux_preset_migrate.sh'
+  - Fix: run the script 'linux_preset_migrate.sh' to automatically rename and move the affected presets
